Fix: SignUpForm gap and padding

--- a/src/components/signup/SignUp.module.scss
+++ b/src/components/signup/SignUp.module.scss
@@ -39,12 +39,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem;
+  padding: 1rem 0;
   border-radius: 15px;
   border: 1px solid map-get($colors, gray);
   @include box-shadow();
   max-width: map-get($points, sm);
   margin: auto;
+
+  @include min-width(map-get($points, sm)) {
+    padding: 2rem;
+  }
 
   h1 {
     margin: 0.5rem auto;
