--- a/src/components/signup/SignUpForm.module.scss
+++ b/src/components/signup/SignUpForm.module.scss
@@ -5,10 +5,16 @@
 .form {
   margin: auto;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: auto 3fr;
   flex-direction: column;
-  gap: 1rem;
+  column-gap: 0.5rem;
+  row-gap: 1rem;
+
   align-items: center;
+
+  @include min-width(map-get($points, sm)) {
+    gap: 1rem;
+  }
 
   label {
     margin: auto;
@@ -42,8 +48,8 @@
 
     button {
       @extend %button-black;
-      padding: 0.25rem 0.5rem;
-      font-size: 0.75rem;
+      padding: 0.5rem 0.5rem;
+      height: 2.6rem;
     }
   }
 
